--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -20,7 +20,522 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 ====Noun====
 {{en-noun}}
 
-technoblade
+# Any of several intelligent [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domestication|domesticated]] [[animal]] ''[[Sus scrofa]]''.
+#: {{syn|en|Thesaurus:pig}}
+#: {{ux|en|The man kept a pen with two '''pigs''' that he fed from carrots to cabbage.}}
+# {{lb|en|specifically}} A young swine, a [[piglet]] {{qualifier|contrasted with a [[hog]], an adult swine}}.
+#* '''2005''' April, ''Live Swine from Canada, Investigation No. 731-TA-1076 (Final), publication 3766, April 2005, U.S. International Trade Commission'' {{ISBN|1457819899}}, page I-9:
+#*: Weanlings grow into feeder '''pigs''', and feeder '''pigs''' grow into slaughter hogs. {{...}} Ultimately the end use for virtually all '''pigs''' and hogs is to be slaughtered for the production of pork and other products.
+# {{lb|en|uncountable}} The [[edible]] [[meat]] of such an animal; [[pork]].
+#: {{ux|en|Some religions prohibit their adherents from eating '''pig'''.}}
+#* '''2005''', Ross Eddy Osborn, ''Thorns of a Tainted Rose'' {{ISBN|0741425319}}, [https://books.google.com.au/books?id=cdg7kQFFcYoC&pg=PA196&dq=%22Miss+Chastene,+could+you+fetch+me+out+an+extra+plate+of+pig%22&hl=en&sa=X&redir_esc=y#v=onepage&q=%22Miss%20Chastene%2C%20could%20you%20fetch%20me%20out%20an%20extra%20plate%20of%20pig%22&f=false page 196]:
+#*: "Miss Chastene, could you fetch me out an extra plate of '''pig''' and biscuit. My partner can't do without your marvelous cooking."
+# A light [[pink]]ish-red [[colour]], like that of a pig (also called pig pink).
+#: {{color panel|FCD7DE}}
+#* '''2019''', Bee Smith, ''Queen Bee's Party''
+#*: So far on the streets there's been a lot of metallic pink (the kind of pink as in the shade of '''pig''' you get, and this is exactly the shade of the diary I've been writing in) {{...}}
+# {{lb|en|derogatory|slang}} Someone who overeats or eats rapidly and noisily.
+#: {{syn|en|Thesaurus:glutton}}
+#: {{ux|en|You gluttonous '''pig'''! Now that you've eaten all the cupcakes, there will be none for the party!}}
+# {{lb|en|derogatory|slang}} A [[lecherous]] or [[sexist]] man.
+#: {{ux|en|She considered him a '''pig''' as he invariably stared at her bosom when they talked.}}
+# {{lb|en|derogatory|slang}} A [[dirty]] or [[slovenly]] person.
+#: {{ux|en|He was a '''pig''' and his apartment a pigpen; take-away containers and pizza boxes in a long, moldy stream lined his counter tops.}}
+# {{lb|en|derogatory}} A very [[obese]] person.
+#: {{syn|en|Thesaurus:fat person}}
+# {{senseid|en|police officer}} {{lb|en|now|chiefly|US|UK|Australia|derogatory|slang}} A [[police officer]]. {{defdate|From ''ante'' 1785.}}
+#: {{syn|en|Thesaurus:police officer}}
+#: {{ux|en|The protester shouted, “Don't give in to the '''pigs'''!” as he was arrested.}}
+#* {{quote-song|en|title=The Revolution Will Not Be Televised|author={{w|Gil Scott-Heron}}|year=1971|passage=There will be no pictures of '''pigs''' shooting down brothers on the instant replay}}
+#* '''1989''', {{w|Dan Simmons}}, ''{{w|Carrion Comfort}}'', [http://books.google.com.au/books?id=ClXFYXTcrXUC&pg=PA359&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y#v=onepage&q=%22pig%22|%22pigs%22%20police%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 359],
+#*: “...Sounds too easy,” Marvin was saying. “What about the '''pigs'''?”
+#*: He meant police.
+#* '''1990''', Jay Robert Nash, ''Encyclopedia of World Crime: Volume 1: A-C'', [http://books.google.com.au/books?id=bCkRAQAAMAAJ&q=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=2BLXT7CeHsaUiAfCo4WRAw&redir_esc=y page 198],
+#*: The bank robberies went on and each raid became more bloody, Meinhof encouraging her followers to “kill the '''pigs'''” offering the slightest resistance, referring to policemen.
+#* '''2008''', Frank Kusch, ''Battleground Chicago: The Police and the 1968 Democratic National Convention'', [http://books.google.com.au/books?id=4pSCQDqmNskC&pg=PA63&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=2BLXT7CeHsaUiAfCo4WRAw&redir_esc=y#v=onepage&q=%22pig%22|%22pigs%22%20police%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 63],
+#*: Backing 300 of the more aggressive protesters was a supporting cast of several thousand more who stared down the small line of police. Those in front resumed their taunts of “'''Pig''', '''pig''', fascist '''pig''',” and “'''pigs''' eat shit, '''pigs''' eat shit.” The rest of the crowd, however, backed off and sat down on the grass when reinforcements arrived. Police did not retaliate for the name-calling, and within minutes the line of demonstrators broke apart and the incident was over without violence.<sup>113</sup>
+#* '''2011''', T. J. English, ''The Savage City: Race, Murder and a Generation on the Edge'', [http://books.google.com.au/books?id=ChtI5MJU0U8C&pg=PT69&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=2BLXT7CeHsaUiAfCo4WRAw&redir_esc=y#v=onepage&q=%22pig%22|%22pigs%22%20police%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false unnumbered page],
+#*: But me, I joined the party to fight the '''pigs'''. That′s why I joined. Because my experience with the police was always negative.
+#* {{quote-song|en|artist=Mayhem (Uptop)|title=All This|year=2017|passage=Got a mind for the undies<br/>I'm tryna stay far from the '''pigs'''}}
+# {{lb|en|informal}} A [[difficult]] [[problem]].
+#: {{ux|en|Hrm... this one's a real '''pig''': I've been banging my head against the wall over it for hours!}}
+# {{lb|en|countable|and|uncountable}} A [[block]] of [[cast]] [[metal]].
+#: {{ux|en|The conveyor carried the '''pigs''' from the smelter to the freight cars.}}
+#: {{ux|en|After the ill-advised trade, the investor was stuck with worthless options for 10,000 tons of iron '''pig'''.}}
+# The [[mold]] in which a block of metal is cast.
+#: {{ux|en|The '''pig''' was cracked, and molten metal was oozing from the side.}}
+# {{lb|en|engineering}} A device for cleaning or inspecting the inside of an oil or gas [[pipeline]], or for separating different substances within the pipeline. Named for the pig-like squealing noise made by their progress.
+#: {{ux|en|Unfortunately, the '''pig''' sent to clear the obstruction got lodged in a tight bend, adding to the problem.}}
+# {{lb|en|US|military|slang}} The general-purpose M60 [[machine gun]], considered to be heavy and bulky.
+#: {{ux|en|Unfortunately, the M60 is about twenty-four pounds and is very unbalanced. You try carrying the '''pig''' around the jungle and see how you feel.}}
+# {{lb|en|uncountable}} A simple [[dice]] [[game]] in which players roll the dice as many times as they like, either accumulating a greater score or losing previous points gained.
+
+=====Hyponyms=====
+* {{sense|mammal of genus Sus}} {{l|en|boar}}, {{l|en|herd boar}}; [[sow]], [[brood sow]]; [[piglet]], [[piggy]]
+
+=====Derived terms=====
+{{der4|en|title=terms derived from the noun "pig"|blind pig|bush pig|dish pig|eat like a pig|flying pig|guinea pig|happy as a pig in shit|if pigs had wings|in a pig's eye|minipig|pig bed|pigface|piggery|piggish|piggy|piggy bank|piggyback|pigheaded|pig in a blanket|pig in a poke|pig iron|pig it|pig Latin|pig lead|piglet|pig-out|pig out|pigpen|pigskin|pig-sticking|pigsty|pig board|pigtail|pigweed|potbellied pig|slam pig|suckling pig|sweat like a pig|when pigs fly|whistle pig|year of the pig}}
+
+=====Descendants=====
+* {{desc|tcs|pig}}
+* {{desc|tpi|pik}}
+* {{desc|bor=1|abe|piks}} {{q|from "pigs"}}
+* {{desc|bor=1|pqm|piks}} {{q|from "pigs"}}
+
+=====Translations=====
+{{trans-top|mammal of genus ''Sus''}}
+{{multitrans|data=
+* Abau: {{tt|aau|huok}}
+* Abenaki: {{tt|abe|piks}}
+* Abkhaz: {{tt|ab|аҳәа}}
+* Abu' Arapesh: {{tt|aah|bul}}
+* Acehnese: {{tt|ace|bui}}
+* Adyghe: {{tt|ady|къо}}, {{tt|ady|хъо}}
+* Afrikaans: {{tt+|af|vark}}
+* Agarabi: {{tt|agd|pon}}
+* Albanian: {{tt+|sq|derr|m}}, {{tt+|sq|thi|m}}
+* Ama: {{tt|amm|fu}}
+* Amanab: {{tt|amn|tata}}
+* Amharic: {{tt+|am|አሳማ}}
+* Aneme Wake: {{tt|aby|boro}}
+* Ansus: {{tt|and|tapui}}
+* Apache:
+*: Western Apache: {{tt|apw|góchiʼ}}
+* Arabic: {{tt|ar|خِنْزِير|m}}, {{tt|ar|حَلُوف|m}}
+*: Egyptian Arabic: {{tt|arz|خنزير|m|tr=ḵanzīr}}, {{tt|arz|حلوف|m|tr=ḥalūf}}
+*: Gulf Arabic: {{tt|afb|خنزير|m|tr=ḵanzīr}}
+*: Moroccan Arabic: {{tt|ary|حلوف|tr=ḥallūf}}, {{tt|ary|خنزير|tr=ḵanzīr}}
+*: North Levantine Arabic: {{tt|apc|خنزير|m|tr=ḵanzīr}}
+* Aragonese: {{t|an|cochín}}
+* Aramaic:
+*: Hebrew: {{tt|arc|חזירא|tr=ħzīrā’|m}}, {{tt|arc|חזירתא|tr=ħzīrtā’|f}}
+*: Syriac: {{tt|arc|ܚܙܝܪܐ|tr=ħzīrā’|m}}, {{tt|arc|ܚܙܝܪܬܐ|tr=ħzīrtā’|f}}
+* Armenian: {{tt+|hy|խոզ}}
+* Aromanian: {{tt|rup|porcu|m}}
+* Assamese: {{tt|as|গাহৰি}}
+* Asturian: {{tt+|ast|gochu|m}}, {{tt+|ast|gocha|f}}
+* Atayal: {{tt|tay|bzyok}}
+* Avar: {{tt|av|болъон}}
+* Azerbaijani: {{tt+|az|donuz}}
+* Bahnar: {{tt|bdq|nhŭng}}
+* Balinese: {{tt|ban|celeng}}
+* Bashkir: {{tt|ba|сусҡа}}
+* Basque: {{tt+|eu|urde}}, {{tt+|eu|zerri}}, {{tt+|eu|txerri}}
+* Bau Bidayuh: {{tt|sne|oyuo}}
+* Belarusian: {{tt|be|свіння́|f}}, {{tt|be|сьвіньня́|f}} {{qualifier|Taraškievica}}
+* Bengali: {{tt|bn|শুওর}}
+* Bodo: {{t|brx|अमा}}
+* Bouyei: {{tt|pcc|duezmul}}, {{tt|pcc|mul}}
+* Breton: {{tt+|br|pemoc'h|m}}
+* Brunei Malay: {{tt|kxd|bayi}}
+* Budukh: {{t|bdk|вак}}
+* Buginese: {{tt|bug|bawi}}
+* Bulgarian: {{tt+|bg|свиня́|f}}
+* Burmese: {{tt+|my|ဝက်}}
+* Buryat: {{t|bua|гахай}}
+* Catalan: {{tt+|ca|porc|m}}
+* Cebuano: {{tt|ceb|baboy}}
+* Central Melanau: {{tt|mel|babui}}
+* Chamicuro: {{tt|ccc|kuuchi}}
+* Chamorro: {{tt|ch|babui}}
+* Chechen: {{tt|ce|хьакха}}, {{tt|ce|жаргӏа}}
+* Chepang: {{tt|cdm|प्‍याक्‌}}
+* Cherokee: {{tt|chr|ᏏᏆ}}
+* Chichewa: {{tt|ny|nkhumba}}
+* Chickasaw: {{tt|cic|shokha'}}
+* Chinese:
+*: Cantonese: {{tt|yue|豬}}, {{tt|yue|猪|tr=zyu1}}
+*: Dungan: {{tt|dng|җў}}
+*: Gan: {{tt|gan|豬}}, {{tt|gan|猪|tr=jy1}}
+*: Hakka: {{tt|hak|豬}}, {{tt|hak|猪|tr=chû}}, {{tt|hak|豬仔}}, {{tt|hak|猪仔|tr=chû-é}}
+*: Jin: {{tt|cjy|豬}}, {{tt|cjy|猪|tr=zu1}}
+*: Mandarin: {{tt+|cmn|豬}}, {{tt+|cmn|猪|tr=zhū}}, {{tt+|cmn|豬玀}}, {{tt+|cmn|猪猡|tr=zhūluó}}, {{tt+|cmn|豕|tr=shǐ}} {{qualifier|classical, obsolete}}
+*: Min Dong: {{tt|cdo|豬}}, {{tt|cdo|猪|tr=dṳ̆}}
+*: Min Nan: {{tt+|nan|豬}}, {{tt|nan|猪|tr=ti, tu}}, {{tt+|nan|豬仔}}, {{tt|nan|猪仔|tr=ti-á, tu-á}}
+*: Wu: {{tt|wuu|豬玀}}, {{tt|wuu|猪猡|tr=tsr lu}}
+*: Xiang: {{tt|hsn|豬}}, {{tt|hsn|猪|tr=jy1}}
+* Chuvash: {{tt|cv|сысна}}
+* Comox: {{tt|coo|kʷašu}}
+* Cornish: {{tt|kw|hogh|m}}, {{tt|kw|mogh|p}}
+* Cree: {{tt|cr|kohkôs}}
+* Czech: {{tt+|cs|prase|n}}, {{tt+|cs|vepř|m}}, {{tt+|cs|svině|f}}
+* Da'a Kaili: {{t-check|kzf|vavu}} {{qualifier|Rai Kaili}}
+* Dalmatian: {{tt|dlm|puarc|m}}
+* Danish: {{tt+|da|svin|n}}, {{tt+|da|gris|c}}
+* Drung: {{tt|duu|waq}}
+* Dutch: {{tt+|nl|zwijn|n}}, {{tt+|nl|varken|n}}
+* Eastern Cham: {{tt|cjm|ꨚꨝꨶꨬ|tr=pabwei}}, {{tt|cjm|ꨂꩆ|tr=un}}
+* Eastern Mari: {{tt|chm|сӧсна}}
+* Egyptian: {{t-egy|rrj|h=r:*r-i-E12}}
+* Erzya: {{tt|myv|туво}}
+* Ese: {{tt|mcq|maha}}
+* Esperanto: {{qualifier|♂♀}} {{tt+|eo|porko}}, {{qualifier|♂}} {{tt|eo|virporko}}, {{qualifier|neologism, ♂}} {{tt|eo|porkiĉo}}, {{qualifier|♀}} {{tt|eo|porkino}}
+* Estonian: {{tt+|et|siga}}, {{tt|et|põrsas}}
+* Evenki: {{tt|evn|сунюрин}}
+* Faroese: {{tt|fo|svín|n}}
+* Fijian: {{tt|fj|vuaka}}
+* Finnish: {{tt+|fi|sika}}
+* French: {{tt+|fr|cochon|m}}, {{tt+|fr|porc|m}}, {{tt+|fr|pourceau|m}}
+*: Old French: {{tt|fro|porc|m}}, {{tt|fro|bacon|m}}
+* Friulian: {{tt|fur|purcit|m}}
+* Galician: {{tt+|gl|porco|m}}, {{tt+|gl|cocho|m}}, {{tt+|gl|verrón|m}}, {{tt|gl|bacarote|m}}, {{tt|gl|currincho|m}}, {{tt+|gl|corricho|m}}, {{tt|gl|canavés|m}}, {{tt+|gl|reco|m}}, {{tt|gl|renco|m}}, {{tt|gl|rencho|m}}, {{tt|gl|quino|m}}, {{tt|gl|melco|m}}
+* Garo: {{t|grt|wak}}
+* Georgian: {{tt+|ka|ღორი}}
+* German: {{tt+|de|Schwein|n}}, {{qualifier|domestic}} {{tt+|de|Hausschwein|n}},, {{tt+|de|Sau|f}} {{qualifier|archaic or dialectal}}
+*: Alemannic German: {{tt|gsw|Sou|f}}
+*: Franconian: {{tt|de|Mocke|f}}
+*: Regional German: {{tt+|de|Docke|f}}, {{tt+|de|Wutz|f}}
+*: Swabian: {{tt|de|Kosel|f}}
+* Gothic: {{tt|got|𐍃𐍅𐌴𐌹𐌽|n}}
+* Greek: {{tt+|el|γουρούνι|n}}
+*: Ancient: {{tt|grc|ὗς|m|f}}, {{tt|grc|χοῖρος|m}}
+* Greenlandic: {{tt|kl|puuluki}}
+* Guerrero Amuzgo: {{tt|amu|kítzku}}
+* Gujarati: {{tt+|gu|ડુક્કર|m}}, {{tt|gu|શૂકર|m}}
+* Hausa: {{tt|ha|alade}}
+* Hawaiian: {{tt|haw|puaʻa}}
+* Hebrew: {{tt+|he|חֲזִיר|m|tr=khazír}}
+* Hindi: {{tt+|hi|सूअर|m}}
+* Hopi: {{tt|hop|pitsooti}}
+* Hungarian: {{tt+|hu|sertés}}, {{tt+|hu|disznó}}, {{tt+|hu|malac}}
+* Hunsrik: {{tt|hrx|Schwein|n}}
+* Iban: {{tt|iba|jani}}, {{tt|iba|babi}}
+* Icelandic: {{tt+|is|svín|n}}
+* Ido: {{qualifier|♂♀}} {{tt+|io|porko}}, {{qualifier|♂}} {{tt+|io|porkulo}}, {{qualifier|♂♀}} {{tt+|io|porkino}}
+* Ilocano: {{tt|ilo|baboy}}
+* Imonda: {{tt|imn|malhu}}
+* Inabaknon: {{tt|abx|baktin}}
+* Indonesian: {{tt+|id|babi}}
+* Interlingua: {{tt|ia|porco}}
+* Irish: {{tt+|ga|muc|f}}
+* Italian: {{tt+|it|maiale|m}}, {{tt+|it|porco|m}}, {{tt+|it|suino|m}}
+* Iu Mien: {{tt|ium|dungz}}
+* Japanese: {{tt+|ja|豚|tr=ぶた, buta}}, {{tt+|ja|ブタ|tr=buta}}
+* Javanese: {{tt+|jv|babi}}
+* Jeju: {{tt|jje|도새기|tr=dosaegi}}
+* Jingpho: {{tt|kac|wa'}}
+* Kabardian: {{tt|kbd|кхъуэ}}
+* Kalmyk: {{t|xal|һаха}}
+* Kannada: {{tt+|kn|ಹಂದಿ}}
+* Karelian: {{tt|krl|počči}}
+* Kazakh: {{tt+|kk|шошқа}}
+* Khasi: {{tt|kha|sniang}}
+* Khmer: {{tt+|km|ជ្រូក}}
+* Kimaragang: {{tt|kqr|wogok}}
+* Koho: {{tt|kpm|sur}}, {{tt|kpm|un}}
+* Kokborok: {{t|trp|wak}}
+* Kombio: {{tt|xbi|wurokn}}
+* Korean: {{tt+|ko|돼지}}
+* Krisa: {{tt|ksi|a}}
+* Kumyk: {{tt|kum|донгуз|tr=doñuz}}
+* Kurdish:
+*: Central Kurdish: {{tt+|ckb|بەراز}}
+*: Northern Kurdish: {{tt+|kmr|beraz|m}}, {{tt+|kmr|xinzîr|m}}, {{tt+|kmr|xûk|m}}
+* Kyrgyz: {{tt+|ky|чочко}}
+* Ladin: {{tt|lld|porcel}}
+* Lao: {{tt+|lo|ໝູ}}
+* Latgalian: {{tt|ltg|cyuka|f}}
+* Latin: {{tt+|la|sūs|c}}, {{tt+|la|porcus|m}}<!--do not put the scientific name here-->
+* Latvian: {{tt+|lv|cūka|f}}
+* Ledo Kaili: {{t-check|lew|bavu}}
+* Lezgi: {{t|lez|вак}}
+* Limburgish: {{tt+|li|zwien}}, {{tt+|li|verke}}
+* Lithuanian: {{tt+|lt|kiaulė|f}}
+* Livonian: {{tt|liv|sigā}}
+* Low German: {{tt+|nds|Swien|n}}
+* Ludian: {{tt|lud|šiga}}
+{{trans-mid}}
+* Luganda: {{tt|lg|embizzi}}
+* Lusitanian: {{tt|xls|porcom}}, {{tt|xls|porgom}}
+* Luxembourgish: {{tt|lb|Schwäin|n}}
+* Lü: {{tt|khb|ᦖᦴ}}
+* Macedonian: {{tt|mk|свиња|f}}
+* Malagasy: {{tt+|mg|kisoa}}
+* Malay: {{tt+|ms|babi}}, {{tt+|ms|khinzir}}
+* Malayalam: {{tt+|ml|പന്നി}}
+* Maltese: {{tt|mt|ħanżir|m}}, {{tt|mt|qażquż|m}}
+* Maléku Jaíka: {{tt|gut|tunhífa}}
+* Manchu: {{tt|mnc|ᡠᠯᡤᡳᠶᠠᠨ}}
+* Mandar: {{tt|mdr|boe}}
+* Manx: {{tt|gv|muc|f}}
+* Maori: {{tt|mi|poaka}}
+* Marathi: {{tt|mr|डुकर|m}}
+* Mazanderani: {{tt|mzn|خی|tr=xi}}
+* Menominee: {{tt|mez|kōhkōs}}
+* Mi'kmaq: {{tt|mic|gulgwi's|an}}
+* Moksha: {{tt|mdf|тува}}
+* Mon: {{tt+|mnw|ကၠိက်}}
+* Mongolian:
+*: Cyrillic: {{tt+|mn|гахай}}
+*: Uyghurjin: {{tt|mn|ᠭᠠᠬᠠᠢ}}
+* Montagnais: {{tt|moe|kukush}}
+* Motu: {{tt|meu|boroma}}
+* Mountain Koiari: {{tt|kpx|ovo}}
+* Nahuatl: {{tt+|nah|pitzotl}}
+* Navajo: {{tt|nv|bisóodi|sc=Latn}}
+* Nepali: {{tt+|ne|सुँगुर}}
+* Newar: {{tt|new|फा }}
+* Ngazidja Comorian: {{tt|zdj|purunku}}
+* Nii: {{tt|nii|kung}}
+* Nivkh: {{tt|niv|овӻоӈ}}
+* Norman: {{tt|nrf|couochon|m}} {{qualifier|Jersey}}, {{tt|nrf|bête à saie|f}} {{qualifier|Jersey}}, {{tt|nrf|por|m}} {{qualifier|Jersey}}, {{tt|nrf|gronneux|m}} {{qualifier|Jersey}}, {{tt|nrf|moussieu|m}} {{qualifier|Jersey}}, {{tt|nrf|quétot|m}} {{qualifier|Jersey}}
+* North Frisian: {{tt|frr|Swin}} {{qualifier|Sylt}}
+* Norwegian: {{tt+|no|svin|n}}, {{tt+|no|gris|m}}
+* Nyunga: {{tt|nys|beerk}}
+* Occitan: {{tt+|oc|pòrc|m}}, {{tt|oc|puèrc|m}}
+* Ojibwe: {{tt|oj|gookoosh}}
+* Okinawan: {{tt|ryu|っわー|tr='wā}}
+* Old Church Slavonic:
+*: Cyrillic: {{tt|cu|свиниꙗ|f}}
+* Old East Slavic: {{t|orv|свиньꙗ|f}}
+* Old English: {{tt|ang|swīn|n}}
+* Old Turkic: {{tt|otk|𐱃𐰆𐰭𐰆𐰕|ts=toŋuz}}
+* Oriya: {{tt|or|ଘୁଷୁରିଛୁଆ}}
+* Oromo: {{t|om|booyee}}
+* Ossetian: {{tt|os|хуы}}
+* Ottawa: {{tt|otw|gookoosh}}
+* Pacoh: {{tt|pac|alic}}, {{tt|pac|alíc}}
+* Palauan: {{tt|pau|babii}}
+* Pashto: {{tt+|ps|خنځير|m|tr=xanjír}}, {{tt|ps|خوګ|m|tr=xug}}
+* Persian: {{tt+|fa|خوک|tr=xuk}}
+* Plautdietsch: {{tt+|pdt|Schwien|n}}
+* Polish: {{tt+|pl|świnia|f}}
+* Portuguese: {{tt+|pt|porco|m}}, {{tt+|pt|suíno|m}}
+* Potawatomi: {{tt|pot|kokosh}}
+* Punjabi: {{tt+|pa|ਸੂਰ|m}}
+* Quechua: {{tt|qu|khuchi}}
+* Rabha: {{t|rah|বাক}}
+* Rapa Nui: {{tt|rap|oru}}
+* Romani: {{tt|rom|balo|m}}, {{tt|rom|bali|f}}
+* Romanian: {{tt+|ro|porc|m}}
+* Romansch: {{tt|rm|portg|m}}, {{tt|rm|piertg|m}}, {{tt|rm|püerch|m}}, {{tt|rm|chucal|m}}
+* Russian: {{tt+|ru|свинья́|f}}, {{tt+|ru|бо́ров|m}} {{qualifier|boar}}
+* S'gaw Karen: {{tt|ksw|ထိး}}
+* Sami:
+*: Inari Sami: {{tt|smn|šahe}}
+*: Kildin Sami: {{tt|sjd|шагкь}}
+*: Northern Sami: {{tt|se|spiidni}}
+*: Skolt Sami: {{tt|sms|šââ´ǩǩ}}
+* Samoan: {{tt|sm|pua'a}}
+* Sango: {{tt|sg|gaduru}}, {{tt|sg|ngûru}}
+* Sanskrit: {{tt+|sa|सूकर}}
+* Santali: {{tt|sat|ᱥᱩᱠᱨᱤ}}
+* Sardinian: {{tt|sc|porcu}}, {{tt|sc|polcu|m}}, {{tt|sc|procu|m}}, {{tt|sc|mannale}}, {{tt|sc|mannali}}
+*: Campidanese: {{tt|sc|procu|m}}, {{tt|sc|mannali|m}}, {{tt|sc|sue|f}}
+* Scottish Gaelic: {{tt|gd|muc|f}}
+* Sebop: {{tt|sib|bu'in}}
+* Serbo-Croatian:
+*: Cyrillic: {{tt|sh|сви́ња|f}}
+*: Roman: {{tt+|sh|svínja|f}}
+* Shan: {{tt+|shn|မူ}}
+* Sichuan Yi: {{tt|ii|ꃮ}}, {{tt|ii|ꃢ}} {{qualifier|literary}}
+* Sicilian: {{tt+|scn|porcu|m}},  {{tt+|scn|majali|m}}
+* Sinhalese: {{tt+|si|ඌරා}}
+* Slovak: {{tt+|sk|prasa|n}}, {{tt+|sk|sviňa|f}}
+* Slovene: {{tt+|sl|svinja|f}}, {{tt+|sl|prašič|m}}, {{tt|sl|pujs|m}}
+* Somali: {{t|so|doofaar}}
+* Sorbian:
+*: Lower Sorbian: {{tt|dsb|swinja|f}}
+*: Upper Sorbian: {{tt|hsb|swinjo|n}}
+* Spanish: {{tt+|es|cerdo|m}}, {{tt+|es|chancho|m}} {{qualifier|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, {{tt+|es|chon|m}} {{qualifier|Northern Central Spain|specifically Cantabria}}, {{tt+|es|coche|m}} {{qualifier|Guatemala}}, {{tt+|es|cochi|m}} {{qualifier|Northwestern Mexico}}, {{tt|es|cochín|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{tt+|es|cochino|m}} {{qualifier|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, {{tt+|es|cocho|m}} {{qualifier|Northern Spain|specifically Leon}}, {{tt+|es|cuchi|m}} {{qualifier|Northern Central and Northwestern Argentina}}, {{tt+|es|cuto|m}} {{qualifier|Northern Spain - specifically Aragon, La Rioja and Navarra}}, {{tt+|es|gocho|m}} {{qualifier|Northern Spain|specifically Asturias and Leon}}, {{tt+|es|gorrino}} {{qualifier|Southern Central and Eastern Central Spain}}, {{tt+|es|guarro|m}} {{qualifier|Western Spain|specifically Extremadura}}, {{tt+|es|marrano|m}} {{qualifier|Central and Western Venezuela|Colombia}}, {{tt+|es|puerco|m}} {{qualifier|Caribbean Islands|Costa Rica|Mexico|Panama}}, {{tt+|es|tocino|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{tt+|es|tunco|m}} {{qualifier|El Salvador}}, {{tt|es|pitzote}} {{qualifier|early modern Mexico}}
+* Swahili: {{tt+|sw|nguruwe}}
+* Swedish: {{tt+|sv|gris|c}}, {{tt+|sv|svin|n}}
+* Sylheti: {{tt|syl|ꠉꠣꠠꠤꠀ}}, {{t|syl|ꠡꠥꠅꠞ}}
+* Tagal Murut: {{tt|mvv|bawi}}, {{tt|mvv|biag}}
+* Tagalog: {{tt+|tl|baboy}}
+* Tajik: {{tt+|tg|хук}}
+* Tamil: {{tt+|ta|பன்றி}}
+* Taos: {{tt|twf|kùciʼína}}
+* Tatar: {{tt+|tt|дуңгыз}}, {{tt+|tt|чучка}}
+* Telugu: {{tt+|te|పంది}}, {{tt+|te|సూకరము|m}}
+* Tetum: {{tt|tet|fahi}}
+* Thai: {{tt+|th|หมู}}
+* Tibetan: {{tt|bo|ཕག་པ}}
+* Tigrinya: {{tt|ti|ሓሰማ}}
+* Timugon Murut: {{tt|tih|bawi}}
+* Tiwa: {{t|lax|oa}}
+* Tocharian B: {{tt|txb|suwo}}
+* Tok Pisin: {{tt|tpi|pik}}
+* Tolai: {{tt|ksd|boroi}}
+* Tongan: {{tt|to|puaka}}
+* Tswana: {{tt|tn|kolobe|c9|c10}}
+* Turkish: {{tt+|tr|domuz}}, {{tt+|tr|hınzır}}
+* Turkmen: {{tt|tk|doňuz}}
+* Tuvan: {{tt|tyv|хаван}}
+* Ubir: {{tt|ubr|foro}}
+* Udi: {{t|udi|боъкъ}}
+* Udmurt: {{tt|udm|парсь}}
+* Ukrainian: {{tt|uk|свиня́|f}}
+* Urat: {{tt|urt|hro'}}
+* Urdu: {{tt|ur|خوک|tr=xūk}}, {{tt|ur|خنزیر|tr=xanzīr}}, {{tt|ur|سؤر|m|tr=sūar}}
+* Urhobo: {{tt|urh|esi}}
+* Uyghur: {{tt|ug|چوشقا}}
+* Uzbek: {{tt|uz|choʻchka}}
+* Venetian: {{tt+|vec|mas-cio|m}}, {{tt|vec|porselo|m}}, {{tt|vec|porzèl|m}}
+* Veps: {{tt|vep|siga}}
+* Vietnamese: {{tt+|vi|heo}}, {{tt+|vi|lợn}}, {{tt+|vi|cúi}}
+* Volapük: {{qualifier|♂♀}} {{tt+|vo|svin}}, {{qualifier|♂}} {{tt+|vo|hisvin}}, {{qualifier|♀}} {{tt+|vo|jisvin}}, {{qualifier|obsolete, ♂}} {{tt|vo|omsvin}}, {{tt|vo|domasvin}} {{qualifier|domestic}}
+* Voro: {{tt|vor|tsiga}}
+* Votic: {{tt|vot|sika}}
+* Walloon: {{tt+|wa|pourcea}}, {{tt+|wa|coshet|m}}
+* Waray-Waray: {{tt|war|baboy}}
+* Warembori: {{tt|wsa|pue}}
+* Welsh: {{tt+|cy|mochyn|m}}
+* West Coast Bajau: {{tt|bdr|menungal}}, {{tt|bdr|ogok}}, {{tt|bdr|bakas}}
+* West Frisian: {{tt|fy|baarch|c}}
+* White Hmong: {{tt|mww|npua}}
+* Wolof: {{tt|wo|mbam-xuux|alt=mbam-xuux mi}}
+* Yakut: {{t|sah|сибиинньэ}}
+* Yiddish: {{tt|yi|חזיר|tr=khazer|m}}, {{tt|yi|כאַזער|m}}
+* Yup'ik: {{tt|esu|sitiinkaq}}
+* Zazaki: {{tt+|zza|xoz}}, {{tt|zza|xenzir}}
+* Zhuang: {{tt|za|mou}}
+* Zulu: {{tt+|zu|ingulube|c9/10}}
+{{trans-bottom}}
+
+{{trans-see|piglet}}
+
+{{trans-see|pork}}
+
+{{trans-top|someone who overeats or eats rapidly}}
+* Afrikaans: {{tt+|af|vark}}
+* Armenian: {{tt+|hy|խոզ}}, {{tt+|hy|կաշալոտ}}
+* Bulgarian: {{t+|bg|прасе|n}}
+* Catalan: {{tt+|ca|golafre|m}}
+* Dutch: {{tt+|nl|varken|n}}, {{tt+|nl|zwijn|n}}, {{tt+|nl|slokop|m|f}}
+* Esperanto: {{tt+|eo|porko}}
+* Finnish: {{tt+|fi|porsas}}, {{tt+|fi|sika}}
+* French: {{tt+|fr|cochon|m}}, {{tt+|fr|porc|m}}
+* German: {{tt+|de|Fresssack|m}}, {{tt|de|Fress-Sack|m}}, {{tt+|de|Schwein|n}}, {{tt+|de|Vielfraß|m}}
+* Greek: {{tt+|el|γουρούνι|n}}
+* Icelandic: {{tt+|is|svín|n}}
+* Irish: {{tt|ga|alpaire|m}}, {{tt|ga|alpachán|m}}, {{tt|ga|craosaire|m}}, {{tt+|ga|muc|f}}, {{tt|ga|pórc|m}}
+* Italian: {{tt+|it|porco|m}}, {{tt+|it|maiale|m}}
+* Macedonian: {{tt|mk|свиња|f}}
+{{trans-mid}}
+* Norwegian: {{tt|no|storeter|m}}
+* Portuguese: {{tt+|pt|porco|m}}
+* Romanian: {{tt+|ro|porc|m}}
+* Serbo-Croatian:
+*: Cyrillic: {{tt|sh|свиња|f}}, {{tt|sh|крме|n}}
+*: Roman: {{tt+|sh|svinja|f}}, {{tt+|sh|krme|n}}
+* Swahili: {{tt+|sw|nguruwe}}
+* Turkish: {{tt+|tr|obur}}
+* Walloon: {{tt+|wa|pourcea|m}}, {{tt+|wa|coshet|m}}
+* Welsh: {{tt+|cy|mochyn|m}}
+* Yiddish: {{tt|yi|חזיר|m|tr=khazer}}
+* Zazaki: {{tt|zza|séxur}}
+{{trans-bottom}}
+
+{{trans-top|nasty or disgusting person}}
+* Afrikaans: {{tt+|af|vark}}
+* Armenian: {{tt+|hy|խոզ}}
+* Bulgarian: {{t+|bg|свиня|f}}
+* Czech: {{tt+|cs|prase|n}}
+* Dutch: {{tt+|nl|zwijn|n}}, {{tt+|nl|smeerlap|m}}
+* Finnish: {{tt+|fi|sika}}
+* French: {{tt+|fr|salaud|m}}, {{tt+|fr|cochon|m}}, {{tt+|fr|porc|m}}, {{tt+|fr|pourceau|m}}
+* Galician: {{tt+|gl|cocho|m}}, {{tt|gl|porcallón|m}}
+* German: {{tt+|de|Schwein|n}}
+* Greek: {{tt+|el|γουρούνι|n}}
+* Hindi: {{tt+|hi|सूअर|m}}
+* Icelandic: {{tt+|is|svín|n}}
+* Italian: {{tt+|it|porco|m}}, {{tt+|it|maiale|m}} {{tt+|it|bastardo|m}}, {{tt+|it|bastarda|f}}, {{tt+|it|stronzo|m}}, {{tt+|it|stronza|f}}
+* Latvian: {{tt+|lv|cūka|f}}
+{{trans-mid}}
+* Macedonian: {{tt|mk|свиња|f}}
+* Polish: {{t+|pl|świntuch|m}}
+* Portuguese: {{tt+|pt|porco|m}}, {{tt+|pt|nojento|m}}
+* Romanian: {{tt+|ro|porc|m}}
+* Russian: {{tt+|ru|свинья́|f}}
+* Serbo-Croatian:
+*: Cyrillic: {{tt|sh|свиња|f}}, {{tt|sh|крме|n}}
+*: Roman: {{tt+|sh|svinja|f}}, {{tt+|sh|krme|n}}
+* Slovene: {{tt+|sl|svinja|f}}, {{tt|sl|prasec|m}}
+* Swahili: {{tt+|sw|nguruwe}}
+* Turkish: {{tt+|tr|tiksindirici}}
+* Walloon: {{tt+|wa|pourcea|m}}
+* Welsh: {{tt+|cy|mochyn|m}}
+{{trans-bottom}}
+
+{{trans-top|dirty or slovenly person}}
+* Afrikaans: {{tt+|af|vark}}
+* Armenian: {{tt+|hy|խոզ}}
+* Bulgarian: {{t+|bg|прасе|n}}
+* Czech: {{tt+|cs|prase|n}}, {{tt+|cs|čuně|n}}
+* Dutch: {{tt+|nl|varken|n}}
+* Finnish: {{tt+|fi|sika}}, {{tt+|fi|sottapytty}}
+* French: {{tt+|fr|cochon|m}}, {{tt+|fr|porc|m}}
+* German: {{tt|de|Dreckschwein|n}}, {{tt|de|Dreckspatz|m}}, {{tt+|de|Ferkel|n}}, {{tt|de|Saubartel|m}} (regional), {{tt+|de|Schmierfink|m}}, {{tt+|de|Schmutzfink|m}}, {{tt+|de|Schwein|n}}, {{tt|de|Schweinigel|m}}, {{tt+|de|Wutz|m}} (regional)
+* Greek: {{tt+|el|γουρούνι|n}}, {{tt|el|βρωμιάρης|m}}
+* Indonesian: {{tt+|id|babi}}
+* Italian: {{tt+|it|porco|m}}, {{tt+|it|maiale|m}}
+* Latvian: {{tt+|lv|cūka|f}}
+* Macedonian: {{tt|mk|свиња|f}}
+{{trans-mid}}
+* Portuguese: {{tt+|pt|porco|m}}
+* Romanian: {{tt+|ro|porc|m}}
+* Russian: {{tt+|ru|свинья́|f}}, {{tt+|ru|сви́нтус|m}}
+* Serbo-Croatian:
+*: Cyrillic: {{tt|sh|свиња|f}}, {{tt|sh|крме|n}}
+*: Roman: {{tt+|sh|svinja|f}}, {{tt+|sh|krme|n}}
+* Slovene: {{tt+|sl|prašič|m}}
+* Swahili: {{tt+|sw|nguruwe}}
+* Turkish: {{tt+|tr|pasaklı}}
+* Walloon: {{tt+|wa|pourcea|m}}, {{tt+|wa|coshet|m}}
+* Welsh: {{tt+|cy|mochyn|m}}
+{{trans-bottom}}
+
+{{trans-top|derogatory slang for police officer}}
+* Basque: {{tt+|eu|txakur}}
+* Czech: {{tt+|cs|fízl|m}}
+* Dutch: {{tt+|nl|flik|m}}, {{tt+|nl|smeris|n}}, {{tt+|nl|wout}}, {{tt+|nl|juut}}, {{tt+|nl|kit|p}}, {{tt+|nl|kankerlijer|m}}, {{tt|nl|tiefushoer|f}}, {{tt+|nl|hoer|m|f}}
+* French: {{tt+|fr|poulet|m}}, {{tt+|fr|flic|m}}, {{tt+|fr|keuf|m}} {{qualifier|verlan}}
+* German: {{tt+|de|Bulle|m}}, {{tt+|de|Büttel|m}} (obsolescent), {{tt|de|Greifer|m}}, {{tt|de|Greiferin|f}}, {{tt|de|Udel|m}} {{qualifier|regional}}; {{tt+|de|Kiberer|m}} {{qualifier|Austria}}, {{tt+|de|Kieberer|m}} {{qualifier|Austria}}; {{tt|de|Schugger|m}} {{qualifier|Switzerland}}, {{tt+|de|Bullenschwein|n}}
+* Greek: {{tt+|el|γουρούνι|n}}
+* Icelandic: {{tt|is|löggusvín|n}}
+{{trans-mid}}
+* Norwegian: {{tt+|no|purk|m}}, {{tt+|no|snut|m}}
+* Polish: {{tt+|pl|pies|m}}
+* Portuguese: {{tt+|pt|porco|m}}
+* Russian: {{tt+|ru|му́сор|m}}
+* Spanish: {{tt+|es|milico|m}} {{qualifier|Andes|River Plate region}}, {{tt+|es|tira|f}} {{qualifier|S Mexico}}, {{tt+|es|chota}} {{qualifier|N Mexico, El Salvador}}
+* Swahili: {{tt+|sw|nguruwe}}
+* Swedish: {{t+|sv|snut}}
+{{trans-bottom}}
+
+{{trans-top|difficult problem}}
+* Finnish: {{tt+|fi|pähkinä}}
+{{trans-mid}}
+* Swahili: {{tt+|sw|nguruwe}}
+{{trans-bottom}}
+
+{{trans-top|cast metal block}}
+* Bulgarian: {{t+|bg|слитък|m}}
+* Finnish: {{tt+|fi|harkko}}
+* Russian: {{tt+|ru|чу́шка|f}}, {{tt+|ru|болва́нка|f}}
+{{trans-mid}}
+* Swahili: {{tt+|sw|nguruwe}}
+{{trans-bottom}}
+
+{{trans-top|mold for a cast metal block}}
+* Finnish: {{tt+|fi|muotti}}
+{{trans-mid}}
+* Swahili: {{tt+|sw|nguruwe}}
+{{trans-bottom}}
+
+{{trans-top|device to clean or inspect a pipe from inside}}
+* Finnish: {{tt+|fi|porsas}}
+{{trans-mid}}
+* Swahili: {{tt+|sw|nguruwe}}
+}}<!-- close {{multitrans}} -->
+{{trans-bottom}}
+
+{{checktrans-top}}
+* Gallurese: {{t-check|sdn|porcu|m}}, {{t-check|sdn|mannale|m}}, {{t-check|sdn|sue|f}}
+{{trans-mid}}
+* Sassarese: {{t-check|sdc|porcu|m}}, {{t-check|sdc|mannale|m}}, {{t-check|sdc|sue|f}}
+{{trans-bottom}}
 
 ====Verb====
 {{en-verb}}
