--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -483,7 +483,8 @@ From {{inh|az|trk-pro|*at|t=horse}}.<ref>{{R:trk-pro:SDM|*ăt|855}}</ref>
 From {{inh|da|non|at}}, cf. {{cog|sv|att}}, {{cog|no|at}}. Probably from {{inh|da|gem-pro|*þat}}, a demonstrative pronoun used as a conjunction, compare {{cog|en|that}}, {{cog|de|dass}}, {{cog|nl|dat}}.
 
 ====Pronunciation====
-* {{IPA|da|[a(d̥)]}}
+* {{IPA|da|/ad/|[æ(d̥)]|[æ(t)]}}
+*
 
 ====Conjunction====
 {{head|da|conjunction}}
