--- a/en/c/chrétienne.741802.wikitext
+++ b/en/c/chrétienne.741802.wikitext
@@ -3,7 +3,7 @@
 ==French==
 
 ===Pronunciation===
-* {{fr-IPA|crét_ienne}}
+* {{fr-IPA|créthienne}}
 * {{audio|fr|LL-Q150 (fra)-Pamputt-chrétienne.wav|Audio}}
 * {{rhymes|fr|ɛn}}
 * {{homophones|fr|chrétienne}}
