--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -212,6 +212,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * Sundanese: {{t|su|tiup}}
 * Swahili: {{t|sw|puliza|alt=-puliza}}
 * Swedish: {{t+|sv|blåsa}}
+* Tetum: {{t|tet|huu}}
 * Thai: {{t+|th|พัด}}
 * Turkish: {{t+|tr|üflemek}}, {{t+|tr|esmek}}
 * Ukrainian: {{t|uk|ду́ти|impf}}, {{t|uk|ві́яти|impf}}, {{t|uk|дму́хати|impf}}
