--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -10,7 +10,7 @@
 ===Etymology===
 From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm|ylond}}, from {{inh|en|ang|īġland}}, {{m|ang|īeġland}}, {{m|ang|ēaland|t=island}}, from {{inh|en|gem-pro|*awjōlandą}} (from {{der|en|gem-pro|*awjō|t=island, waterland, meadow}}, from {{der|en|ine-pro|*h₂ekʷeh₂}}) + {{m|gem-pro|*landą|t=land}}, equivalent to {{af|en|ey|land}}.
 
-Cognate with {{cog|sco|island}}, {{m|sco|iland}}, {{m|sco|yland||island}}, {{cog|fy|eilân||island}}, {{cog|stq|Ailound||island}}, {{cog|nl|eiland||island}}, {{cog|nds|Eiland||island}}, {{cog|de|Eiland||island}}, {{cog|sv|ö||island}}, {{cog|da|ø||island}}, {{cog|no|øy||island}}, {{cog|is|eyland||island}}.
+Cognate with {{cog|sco|island}}, {{m|sco|iland}}, {{m|sco|yland||island}}, {{cog|fy|eilân||island}}, {{cog|stq|Ailound||island}}, {{cog|nl|eiland||island}}, {{cog|nds|Eiland||island}}, {{cog|de|Eiland||island}}, {{cog|sv|ö||island}} ({{m|sv|Öland}}), {{cog|da|ø||island}}, {{cog|no|øy||island}}, {{cog|is|eyland||island}}.
 
 The insertion of ⟨s⟩—a 16th century spelling modification—is due to a change in spelling to the unrelated term {{m|en|isle}}, which previously lacked ''s'' (cf. {{noncog|enm|ile}}, {{m|enm|yle}}). The re-addition was mistakingly carried over to include ''iland'' as well. Related also to {{cog|de|Aue||water-meadow}}, {{cog|la|aqua||water}}. More at {{l|en|ea}}.
 
