--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -26,7 +26,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a {{m|en|
 
 ====Derived terms====
 * {{vern|muskrat weed}} ({{taxlink|Thalictrum pubescens|species|ver=210910}})
-* {{vern|muskrat root}}
+* {{vern|muskrat root}} ({{taxlink|Acorus calamus|species|ver=210910}})
 
 ====Translations====
 {{trans-top|''Ondatra zibethicus''}}
