--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -258,6 +258,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Taos: {{t|twf|ȍdénemą}}
 * Tatar: {{t+|tt|ияк|sc=Cyrl}}
 * Telugu: {{t+|te|గడ్డం|sc=Telu}}, {{t+|te|చుబుకం|sc=Telu}}
+* Tetum: {{t|tet|timir}}
 * Thai: {{t+|th|คาง}}
 * Tibetan: {{t|bo|ཀོ་ཀོ}}, {{t|bo|ཨོག་མ}}
 * Tigrinya: {{t+|ti|መንከስ|sc=Ethi}}
