--- a/en/l/leave out.741825.wikitext
+++ b/en/l/leave out.741825.wikitext
@@ -26,5 +26,8 @@
 ====Translations====
 {{trans-see|to leave out or to not include|omit}}
 
+====Derived terms====
+* {{l|en|leave it out}}
+
 [[Category:English phrasal verbs]]
 [[Category:English phrasal verbs with particle (out)]]
