--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -56,6 +56,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 
 =====Related terms=====
 {{rel4|en|breed like rabbits
+|buy the rabbit
 |fuck like rabbits
 |kill the rabbit
 |pull a rabbit out of a hat
