--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -84,7 +84,7 @@
 ====Translations====
 {{trans-top|English of the United States}}
 * Arabic: {{t|ar|اَلْإِنْجِلِيزِيَّة اَلْأَمْرِيكِيَّة|f|tr=al-ʾingilīziyya l-ʾamrīkiyya}}
-* Catalan: {{t|ca|anglès americà|m}}, {{t|ca|anglès estatunidenc|m}}
+* Catalan: {{t|ca|anglès estatunidenc|m}}, {{t|ca|anglès americà|m}}
 * Chinese:
 *: Cantonese: {{t|yue|美國英語|tr=mei gwok jīng jyu|sc=Hani}}
 *: Mandarin: {{t+|cmn|美國英語|sc=Hani}}, {{t+|cmn|美国英语|tr=Měiguó Yīngyǔ|sc=Hani}}, {{t|cmn|美式英語|sc=Hani}}, {{t|cmn|美式英语|tr=Měishì Yīngyǔ|sc=Hani}}
@@ -92,27 +92,33 @@
 * Danish: {{t|da|amerikansk engelsk}}
 * Dutch: {{t|nl|Amerikaans-Engels}}
 * Estonian: {{t|et|Ameerika inglise keel}}
-* Finnish: {{t+|fi|amerikanenglanti}}
+* Finnish: {{t+|fi|amerikanenglanti}}; {{t|fi|amerikka}} {{qualifier|rare, derogative}}
 * French: {{t+|fr|anglais américain|m}}
 * Galician: {{t|gl|inglés estadounidense|m}}, {{t|gl|inglés americano|m}}
 * Georgian: {{t|ka|ამერიკული ინგლისური}}
-* German: {{t|de|US-amerikanisches Englisch|n}}, {{t|de|Amerikanisches Englisch|n}} {{q|proscribed or nonstandard}}
-{{trans-mid}}
+* German: {{t|de|US-amerikanisches Englisch|n}}, {{t|de|amerikanisches Englisch|n}}, {{t|de|Amerikanisches Englisch|n}} {{q|proscribed or nonstandard}}, {{t+|de|Amerikanisch|n}} {{q|colloquial}}
 * Hungarian: {{t+|hu|amerikai angol}}
+* Italian: {{t+|it|inglese americano|m}}
 * Japanese: {{t|ja|アメリカ英語|tr=Amerika-Eigo}}, {{t|ja|米英語|tr=Bei-Eigo}}, {{t+|ja|米語|tr=Beigo}}
 * Korean: {{t|ko|^미국 ^영어}} ({{t+|ko|美國英語|sc=Hani}})
+{{trans-mid}}
 * Malay: {{t|ms|bahasa Inggeris Amerika}}, {{t|ms|Inggeris Amerika}}
 * Marathi: {{t|mr|अमेरिकन इंग्रजी|f}}, {{t|mr|अमेरिकन इंग्लिश|f}}
 * Norwegian: {{t|no|amerikansk-engelsk}}
-* Polish: {{t|pl|[[amerykański]] [[angielski]]}}
+*: Bokmål: {{t|nb|amerikansk-engelsk|m}}, {{t+|nb|amerikansk|m}}
+*: Nynorsk: {{t|nn|amerikansk-engelsk|m}}, {{t|nn|amerikansk|m}}
+* Persian: {{t|fa|انگلیسی آمریکایی|tr=engelisi-ye âmrikâyi|sc=fa-Arab}}
+* Polish: {{t|pl|[[amerykański]] [[angielski]]}}, {{t+|pl|amerykański}}
 * Portuguese: {{t+|pt|inglês americano|m}}
+* Occitan: {{t|oc|anglés american|m}}
 * Romanian: {{t|ro|engleză americană|f}}
 * Russian: {{t|ru|америка́нский англи́йский|m}}
 * Spanish: {{t|es|inglés estadounidense|m}}, {{t|es|inglés americano|m}}
 * Swahili: {{t|sw|Kiingereza cha Kimarekani}}
-* Swedish: {{t+|sv|amerikansk engelska}}
+* Swedish: {{t+|sv|amerikansk engelska|c}}, {{t+|sv|amerikanska|c}}
 * Turkish: {{t+|tr|Amerikan İngilizcesi}}, {{t+|tr|Amerikanca}}
 * Vietnamese: {{t+|vi|tiếng Mỹ}}
+* Volapük: {{t|vo|Lamerikänapük}}, {{t|vo|Linglänapük Lamerikänik}}, {{t|vo|Lamerikäna-Linglänapük}}
 {{trans-bottom}}
 
 {{trans-top|North American English}}
