--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -4,6 +4,10 @@
 ===Etymology===
 From {{af|en|she-|goat}}.
 
+===Pronunciation===
+* {{a|RP}} {{IPA|en|/ˈʃiː.ɡəʊt/}}
+* {{a|GA}} {{IPA|en|/ˈʃi.ɡoʊt/}}
+
 ===Noun===
 {{en-noun}}
 
