--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -137,7 +137,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 {{trans-mid}}
 * Korean: {{t+|ko|호루라기}}
 * Latvian: {{t|lv|svilpošana|f}}
-* Lithuanian: {{t-needed|lt}}
+* Lithuanian: {{t|lt|švilpimas|m}}
 * Persian: {{t+|fa|سوت|tr=sut}}
 * Polish: {{t+|pl|gwizd|m}}, {{t+|pl|świst|m}}
 * Portuguese: {{t|pt|apitada|f}} {{qualifier|with a whistle}}, {{t|pt|assoviada}}, {{t|pt|assobiada}} {{qualifier|with one’s mouth}}, {{t+|pt|apito|m}}, {{t+|pt|assovio|m}}, {{t+|pt|assobio|m}}
