--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -204,6 +204,7 @@ From {{inh|la|itc-pro|*-om}}, from {{inh|la|ine-pro|*-oHom|pos=genitive plural e
 
 ====Alternative forms====
 * {{alter|la|-ûm}} (''formerly used in New Latin on words of the first and second declension; see usage notes'')
+* {{alter|la|-om}} (''conditioned variant used after '' -v-, -qu-, -gu-, -u- ''up through the middle of the first century AD'')
 
 ====Suffix====
 {{head|la|suffix|head=-um|cat2=inflectional suffixes}}
@@ -211,9 +212,19 @@ From {{inh|la|itc-pro|*-om}}, from {{inh|la|ine-pro|*-oHom|pos=genitive plural e
 # {{n-g|genitive plural ending}}
 
 ====Usage notes====
-Latin genitive plural forms take the ending ''-um'' either by itself or with additional preceding material (generally determined by the word's conjugation class). First and second declension nouns and adjectives usually have genitive plural forms ending in ''-ārum'' and ''-ōrum'', but in some contexts take the short ending ''-um'' (without preceding ''-ār-/-ōr-'') instead: this is common with words denoting weights and measures and with distributive numerals.<ref>Roby, Henry John. [https://www.google.com/books/edition/A_Grammar_of_the_Latin_Language_from_Pla/KYpfAAAAMAAJ?hl=en&gbpv=1&pg=PA124&printsec=frontcover A Grammar of the Latin Language from Plautus to Suetonius], Volume 1, (1872), page 124</ref><ref>Zumpt, Karl Gottlob. [https://books.google.com/books?id=A7NAAAAAYAAJ&newbks=0&printsec=frontcover&pg=PA10 A Grammar of the Latin Language], Fourth Edition, translated by John Kenrick (1836), page 10</ref>
+Latin genitive plural forms take the ending ''-um'' either by itself or with additional preceding material (generally determined by the word's conjugation class). First and second declension nouns and adjectives usually have genitive plural forms ending in ''-ārum'' and ''-ōrum'', but in some contexts take the short ending ''-um'' (without preceding ''-ār-/-ōr-'') instead: this is common with words denoting weights, measures and monetary value and with distributive numerals.<ref>Roby, Henry John. [https://www.google.com/books/edition/A_Grammar_of_the_Latin_Language_from_Pla/KYpfAAAAMAAJ?hl=en&gbpv=1&pg=PA124&printsec=frontcover A Grammar of the Latin Language from Plautus to Suetonius], Volume 1, (1872), page 124</ref><ref>Zumpt, Karl Gottlob. [https://books.google.com/books?id=A7NAAAAAYAAJ&newbks=0&printsec=frontcover&pg=PA10 A Grammar of the Latin Language], Fourth Edition, translated by John Kenrick (1836), page 10</ref>
 
-In New Latin texts, the genitive plural suffix ''-um'' was formerly often spelled with an accent as ''-ûm'' when it appears in place of ''-ōrum'' or ''-ārum'' (as in ''deûm'' or ''amphorûm''). This circumflexed spelling appears to have been motivated by the reinterpretation of the ending as a contraction of ''-ōrum'' (this interpretation is not etymologically accurate: ''-ōrum'' is in fact an extension of the original genitive plural ending ''-um''). Other factors that potentially reinforced the use of the spelling ''-ûm'' are influence from the spelling of Greek genitive plural forms ending in -ῶν or desire to disambiguate genitive plural forms from accusative singular forms which would otherwise be spelled the same.
+* second declension words with genitive plurals in ''-um'':
+** distributive numerals
+** names of weights and measures: {{m|la|dēnārius}}, {{m|la|medimnum}}, {{m|la|nummus}}, {{m|la|sēstertius}}, {{m|la|stadium}}, {{m|la|talentum}} 
+** {{m|la|deus}} and {{m|la|dīvus}} (the latter having the archaic genitive plural form ''divom'' with O due to the preceding V)
+** various other words, especially in poetry
+* first declension words with genitive plurals in ''-um'':
+** the measure words  and {{m|la|amphora}} and {{m|la|drachma}} (less frequently than ''drachmarum'')
+** in dactylic verse, compounds of ''-cola'' and ''-gena''
+** some masculine Greek proper nouns, such as patronymics
+
+In New Latin texts, the genitive plural suffix ''-um'' was formerly often spelled with an accent as ''-ûm'' when it appears in place of ''-ōrum'' or ''-ārum'' (as in ''deûm'' or ''amphorûm''). This circumflexed spelling appears to have been motivated by the reinterpretation of the ending as a contraction of ''-ōrum'' (this interpretation is not etymologically accurate: ''-ōrum'' is in fact an extension of the original genitive plural ending ''-um''); for the same reason, it can be found spelled as -ūm in some sources that use macrons to mark long vowels, such as Lewis and Short's ''Latin Dictionary.'' Other factors that potentially reinforced the use of the spelling ''-ûm'' are influence from the spelling of Greek genitive plural forms ending in -ῶν or desire to disambiguate genitive plural forms from accusative singular forms which would otherwise be spelled the same.
 
 ====References====
 <references/>
